# code-security-scanner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/code_security_scanner/: __init__.py  cli.py  models.py  scanner.py
tests/: test_scanner.py
